--- a/style.css
+++ b/style.css
@@ -18,4 +18,29 @@ body{
     font-size:30px;
     text-align: center;
     
+    
+}
+
+.button1{
+    
+    background-color: gray;
+    width: 170px;
+    height: 170px;
+    border-radius: 50px;
+    
+    
+}
+
+.button2{
+    background-color: gray;
+    width: 170px;
+    height: 170px;
+    border-radius:50px;
+    
+}
+
+
+.svar{
+    font-size:50px;
+    
 }
