--- a/style.css
+++ b/style.css
@@ -3,13 +3,14 @@ body{
 }
 
 #rectangle{
-    width:600px;
+    display: flex;
     height: 150px;
     background-color: black;
-    align-content: center;
-    margin-left: 400px;
     border-radius: 50px;
-    
+    justify-content: center;
+    align-content: center;
+    position: relative;
+    top: 20px;
     
 }
 #question{
@@ -17,16 +18,30 @@ body{
     font-family: monospace;
     font-size:30px;
     text-align: center;
+    position: relative;
+   top: 30px;
     
     
 }
 
+#sporgsmol{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    position: relative;
+    top: 30px;
+    
+}
 .button1{
     
     background-color: gray;
     width: 170px;
     height: 170px;
     border-radius: 50px;
+ 
+  
+  
+   
     
     
 }
@@ -36,6 +51,7 @@ body{
     width: 170px;
     height: 170px;
     border-radius:50px;
+   
     
 }
 
