--- a/style.css
+++ b/style.css
@@ -77,12 +77,14 @@ body{
 }
 
 .nedtelling {
+    font-family: monospace;
     display: flex;
     justify-content: center;
     align-content: center;
     position: relative;
     top: 30px;
     font-size: 35px 
+    
     
     
 }
