--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
 #rectangle{
     display: flex;
     height: 150px;
-    background-color: black;
+    background-color: #464646;
     border-radius: 50px;
     justify-content: center;
     align-content: center;
@@ -34,9 +34,9 @@ body{
 }
 .button1{
     
-    background-color: gray;
-    width: 170px;
-    height: 170px;
+    background-color: #464646;
+    width: 140px;
+    height: 140px;
     border-radius: 50px;
  
   
@@ -47,9 +47,9 @@ body{
 }
 
 .button2{
-    background-color: gray;
-    width: 170px;
-    height: 170px;
+    background-color: #464646;
+    width: 140px;
+    height: 140px;
     border-radius:50px;
    
     
@@ -57,7 +57,9 @@ body{
 
 
 .svar{
-    font-size:50px;
+    font-size:40px;
+    color: white;
+    
     
 }
 
@@ -69,8 +71,8 @@ body{
     justify-content: center;
     align-content: center;
     position: relative;
-    top: 30px;
-    font-size: 40px
+    
+    font-size: 60px
     
     
     
@@ -83,8 +85,23 @@ body{
     align-content: center;
     position: relative;
     top: 30px;
-    font-size: 35px 
+    font-size: 30px 
     
     
+    
+}
+
+.hadess {
+    position: relative;
+    width: 15%;
+    top: 30px; 
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    justify-content: center; 
+    margin: auto;
+    
+    
+  
     
 }
